The general table showing the clubs and their points is functional

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,10 +8,12 @@
 <body>
     <h1>Welcome to the GUDLFT Registration Portal!</h1>
     Please enter your secretary email to continue:
-    <form action="showSummary" method="post">
+    <form action="/showSummary" method="post">
         <label for="email">Email:</label>
         <input type="email" name="email" id=""/>
         <button type="submit">Enter</button>
     </form>
+    <br>
+    <small>if you wish to consult the points table of the clubs <a href="/clubsArray">click here</a> !</small>
 </body>
 </html>
