--- a/templates/clubs_array.html
+++ b/templates/clubs_array.html
@@ -6,14 +6,15 @@
 	<title>Clubs Array</title>
 </head>
 <body>
-	<h2>Clubs array </h2><a href="{{url_for('logout')}}">Logout</a>
-	<ul>
+	<ul style="border: 2px solid; width: 50%; list-style: none; padding: 0;">
         {% for club in clubs%}
-        <li>
-            {{club['name']}}<br>
-            Number of points: {{comp['points']}}
+        {% if loop.index%2 != 0 %}
+        <li style="background-color: rgb(226,226,226); padding: 5px;">
+        {% else %}
+        <li style="padding: 5px;">
+        {% endif %}
+            {{club['name']}}<br>Number of points: {{club['points']}}
         </li>
-        <br>
         {% endfor %}
     </ul>
 </body>
