--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -31,6 +31,7 @@
         {% endfor %}
     </ul>
     {%endwith%}
+    <small>if you wish to consult the points table of the clubs <a href="/clubsArray">click here</a> !</small>
 
 </body>
 </html>
