--- a/templates/clubs_array.html
+++ b/templates/clubs_array.html
@@ -6,6 +6,7 @@
 	<title>Clubs Array</title>
 </head>
 <body>
+    <h2>Clubs array </h2>
 	<ul style="border: 2px solid; width: 50%; list-style: none; padding: 0;">
         {% for club in clubs%}
         {% if loop.index%2 != 0 %}
