--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -19,15 +19,15 @@
     <h3>Competitions:</h3>
     <ul>
         {% for comp in competitions%}
-        <li>
-            {{comp['name']}}<br />
-            Date: {{comp['date']}}</br>
+        <li class="competition">
+            {{comp['name']}}<br>
+            Date: {{comp['date']}}<br>
             Number of Places: {{comp['numberOfPlaces']}}
             {%if comp['numberOfPlaces']|int >0%}
             <a href="{{ url_for('book',competition=comp['name'],club=club['name']) }}">Book Places</a>
             {%endif%}
         </li>
-        <hr />
+        <br>
         {% endfor %}
     </ul>
     {%endwith%}
