the application no longer crashes when an unknown email address is entered

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,14 @@
 </head>
 <body>
     <h1>Welcome to the GUDLFT Registration Portal!</h1>
+    {% with messages = get_flashed_messages()%}
+    {% if messages %}
+    <ul>
+       {% for message in messages %}
+        <li>{{message}}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
     Please enter your secretary email to continue:
     <form action="/showSummary" method="post">
         <label for="email">Email:</label>
@@ -15,5 +23,6 @@
     </form>
     <br>
     <small>if you wish to consult the points table of the clubs <a href="/clubsArray">click here</a> !</small>
+    {% endwith %}
 </body>
 </html>
